// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly when the fullWidth is true 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the size is medium 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 48px;
  padding-left: 16px;
  padding-right: 16px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the size is semi 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 32px;
  padding-left: 4px;
  padding-right: 4px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is contained and disabled is true 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        data-testid="btn-disabled"
        disabled=""
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #FFFFFF00;
  border: 1px solid #f4ab34;
  border-radius: 4px;
  color: #363636;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #e1e1e1;
  border: 1px solid #f6b854;
  color: #111111;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #F8C675;
  color: #111111;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #F8C675;
  color: #111111;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #FFFFFF00;
  border: 1px solid #f4ab34;
  border-radius: 4px;
  color: #363636;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #e1e1e1;
  border: 1px solid #f6b854;
  color: #111111;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #F8C675;
  color: #111111;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #F8C675;
  color: #111111;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        disabled=""
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #FFFFFF00;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #f4ab34;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #e1e1e1;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #FFFFFF00;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #f4ab34;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #e1e1e1;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #c9c9c9;
  border: 1px solid #FFFFFF00;
  color: #111111;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        disabled=""
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly with default props 1`] = `
Array [
  ".button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly with the given icon name 1`] = `
Array [
  ".icon-0-2-7 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-8 {
  font-size: 24px;
}
.button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  margin-right: 8px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class=" icon-0-2-7 icon-d0-0-2-8 natds-icons natds-icons-filled-action-check Icon-gaya"
            data-testid="icon-filled-action-check"
            role="img"
          />
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render icon to the left when the showIcon is true and iconPosition is left 1`] = `
Array [
  ".icon-0-2-7 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-8 {
  font-size: 24px;
}
.button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  margin-left: 8px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class=" icon-0-2-7 icon-d0-0-2-8 natds-icons natds-icons-outlined-default-mockup Icon-gaya"
            data-testid="icon-outlined-default-mockup"
            role="img"
          />
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render icon to the right as default when the showIcon is true 1`] = `
Array [
  ".icon-0-2-7 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-8 {
  font-size: 24px;
}
.button-0-2-1 {
  cursor: pointer;
  outline: 0;
  overflow: hidden;
  position: relative;
  box-shadow: none;
}
.button-0-2-1:disabled {
  border: none;
  cursor: default;
  box-shadow: none;
}
.button-0-2-1:hover:not([disabled]) {}
.button-0-2-1:focus-visible:not([disabled]) {}
.button-0-2-1:active:not([disabled]) {}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  font-size: 14px;
  text-align: center;
  font-family: Roboto, Arial;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 1px solid #FFFFFF00;
  border-radius: 4px;
  color: #333333;
  height: 40px;
  padding-left: 8px;
  padding-right: 8px;
  width: auto;
}
.button-d0-0-2-4:disabled {
  background-color: #a4a4a4;
  color: #363636;
}
.button-d0-0-2-4:hover:not([disabled]) {
  background-color: #f6b854;
  border: 1px solid #FFFFFF00;
  color: #333333;
}
.button-d0-0-2-4:focus-visible:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.button-d0-0-2-4:active:not([disabled]) {
  background-color: #F8C675;
  border: 1px solid #FFFFFF00;
  color: #333333;
  opacity: 0.64;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row;
}
.label-d2-0-2-6 {
  letter-spacing: 1px;
  margin-right: 8px;
  text-transform: capitalize;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="button-0-2-1 button-d0-0-2-4  Button-gaya"
        type="button"
      >
        <div
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class=" icon-0-2-7 icon-d0-0-2-8 natds-icons natds-icons-outlined-default-mockup Icon-gaya"
            data-testid="icon-outlined-default-mockup"
            role="img"
          />
        </div>
      </button>
    </div>
  </div>,
]
`;
